Update copy for BT app onboarding flow

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -113,17 +113,17 @@
     "launch_notif_subheader": "We won't bother you except to share updates on your potential exposure risks.",
     "launch_notification_access": "Allow notifications",
     "launch_screen1_header": "The way back to normal starts here.",
-    "launch_screen2_header_bluetooth": "PathCheck allows your phone to keep an anonymous record of other phones it encounters during your day.",
+    "launch_screen2_header_bluetooth": "Your phone remembers other devices it meets but won't identify you to other people.",
     "launch_screen2_header_location": "Get notified if you cross paths with someone later diagnosed for COVID-19.",
-    "launch_screen2_subheader_bluetooth": "The date and length of time of the encounter are recorded along with an estimate of how close the two phones may have been.",
+    "launch_screen2_subheader_bluetooth": "Nearby phones use Bluetooth to share and save random number strings to recall devices nearby.\n\nIf a person reports a positive diagnosis, their phone's recent random IDs are flagged to anonymously notify others. No locations or personal info is shared",
     "launch_screen2_subheader_location": "Knowledge is power.",
-    "launch_screen3_header_bluetooth": "All data is encrypted and privately stored on your phone.",
+    "launch_screen3_header_bluetooth": "Receive notifications when someone you encountered later chooses to report a positive diagnosis.",
     "launch_screen3_header_location": "If you test positive, you can choose to donate your data anonymously",
-    "launch_screen3_subheader_bluetooth": "Your phone will not share any personal information with other users of PathCheck unless you choose to anonymously report a positive diagnosis.",
+    "launch_screen3_subheader_bluetooth": "Learn details about the encounter, such as the date, duration, and Bluetooth signal strength.",
     "launch_screen3_subheader_location": "Which helps keep your entire community safe.",
-    "launch_screen4_header_bluetooth": "Get notified if an owner of a phone you have encountered is diagnosed with COVID-19 and chooses to anonymously share their health status.",
+    "launch_screen4_header_bluetooth": "If you test positive for the virus that cuases COVID-19, you can choose to share your diagnosis anonymously.",
     "launch_screen4_header_location": "You're in complete control. Data is only saved on your phone.",
-    "launch_screen4_subheader_bluetooth": "In this event, find information from your local Healthcare Authority about what to do next.",
+    "launch_screen4_subheader_bluetooth": "This helps others in your community contain the spread of the virus.",
     "launch_screen4_subheader_location": "If you test positive, you alone can choose whether to share.",
     "launch_set_up_phone_bluetooth": "Done",
     "launch_set_up_phone_location": "Set up my phone",
