Move isGPS into config file. Export TracingStrategyAssets as a function to dynamically load translations using useTranslation hook
Fix misspelled copy.
Fix test snapshots - should be for GPS not BT

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -121,7 +121,7 @@
     "launch_screen3_header_location": "If you test positive, you can choose to donate your data anonymously",
     "launch_screen3_subheader_bluetooth": "Learn details about the encounter, such as the date, duration, and Bluetooth signal strength.",
     "launch_screen3_subheader_location": "Which helps keep your entire community safe.",
-    "launch_screen4_header_bluetooth": "If you test positive for the virus that cuases COVID-19, you can choose to share your diagnosis anonymously.",
+    "launch_screen4_header_bluetooth": "If you test positive for the virus that causes COVID-19, you can choose to share your diagnosis anonymously.",
     "launch_screen4_header_location": "You're in complete control. Data is only saved on your phone.",
     "launch_screen4_subheader_bluetooth": "This helps others in your community contain the spread of the virus.",
     "launch_screen4_subheader_location": "If you test positive, you alone can choose whether to share.",
